@startuml

title __CAR's Class Diagram__\n

  package com.company.model.car {
    abstract class Car {
        + Car()
    }
  }
  

  package com.company.model.car {
    class CarBuilder {
        + build()
    }
  }
  

  package com.company.model.car {
    class Saab95 {
        - turboOn : boolean
        + Saab95()
        + setTurboOn()
        + setTurboOff()
        + speedFactor()
    }
  }
  

  package com.company.model.car {
    class Volvo240 {
        {static} - trimFactor : double
        + Volvo240()
        + speedFactor()
    }
  }
  

  Car -up-|> Vehicle
  CarBuilder -up-|> VehicleBuilder
  Saab95 -up-|> Car
  Volvo240 -up-|> Car


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
